Update @jonaslagoni as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,7 +15,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/13396189?v=4",
       "profile": "https://github.com/jonaslagoni",
       "contributions": [
-        "code"
+        "code",
+        "maintenance"
       ]
     },
     {
