--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,11 @@
       "profile": "https://github.com/jonaslagoni",
       "contributions": [
         "code",
-        "maintenance"
+        "maintenance",
+        "question",
+        "ideas",
+        "doc",
+        "bug"
       ]
     },
     {
