--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "contributors:generate": "all-contributors generate"
   },
   "dependencies": {
-    "@asyncapi/generator-react-sdk": "^0.2.11"
+    "@asyncapi/generator-react-sdk": "^0.2.11",
+    "@asyncapi/modelina": "^0.24.0",
+    "@asyncapi/parser": "^1.7.0",
+    "@babel/core": "^7.15.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
+    "@asyncapi/generator": "^1.8.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.0.4",
     "@semantic-release/npm": "^7.0.3",
