Fixed all issues

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "echo \"No tests specified yet\"",
     "lint": "./node_modules/.bin/eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "npm run lint -- --fix",
-    "generate:assets": "echo \"Nothing to generate\"",
+    "generate:assets": "npm run generate:examples",
+		"generate:examples": "npm run generate:examples:pubsub",
+		"generate:examples:pubSub": "cd \"examples/publish and subscribe\" && sh Generate.sh",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "semantic-release",
     "contributors:add": "all-contributors add",
@@ -33,7 +35,7 @@
   },
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^0.2.11",
-    "@asyncapi/modelina": "^0.24.0",
+    "@asyncapi/modelina": "^0.25.0",
     "@asyncapi/parser": "^1.7.0",
     "@babel/core": "^7.15.0"
   },
