--- a/template/AsyncapiNatsClient/AsyncapiNatsClient.csproj
+++ b/template/AsyncapiNatsClient/AsyncapiNatsClient.csproj
@@ -2,10 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>asyncapi-nats-client</RootNamespace>
+    <RootNamespace>Asyncapi.Nats.Client</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="NATS.Client" />
+    <None Remove="System.Text.Json" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="NATS.Client" Version="0.12.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 </Project>
