--- a/package.json
+++ b/package.json
@@ -85,7 +85,12 @@
     "supportedProtocols": [
       "nats"
     ],
-    "parameters": {},
+    "parameters": {
+      "version": {
+        "default": "0.0.1",
+        "description": "Version of the generated library"
+      }
+    },
     "generator": ">=1.1.1 <2.0.0"
   }
 }
