--- a/package.json
+++ b/package.json
@@ -89,6 +89,10 @@
       "version": {
         "default": "0.0.1",
         "description": "Version of the generated library"
+      },
+      "projectName": {
+        "default": "AsyncapiNatsClient",
+        "description": "Name of the generated library"
       }
     },
     "generator": ">=1.1.1 <2.0.0"
