--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
       "version": {
         "default": "0.0.1",
         "description": "Version of the generated library"
+      },
+      "repositoryUrl": {
+        "description": "Repository url for the project file, often needed for release pipelines"
       }
     },
     "generator": ">=1.1.1 <2.0.0"
