added new property versions

--- a/package.json
+++ b/package.json
@@ -89,6 +89,18 @@
       "version": {
         "default": "0.0.1",
         "description": "Version of the generated library"
+      },
+      "packageVersion": {
+        "default": "0.0.1",
+        "description": "Version of the generated library"
+      },
+      "assemblyVersion": {
+        "default": "0.0.1.0",
+        "description": "Version of the generated library"
+      },
+      "fileVersion": {
+        "default": "0.0.1.0",
+        "description": "Version of the generated library"
       }
     },
     "generator": ">=1.1.1 <2.0.0"
