feat: add new property versions (#268)

--- a/package.json
+++ b/package.json
@@ -89,6 +89,15 @@
       "version": {
         "default": "0.0.1",
         "description": "Version of the generated library"
+      },
+      "packageVersion": {
+        "description": "PackageVersion of the generated library"
+      },
+      "assemblyVersion": {
+        "description": "AssemblyVersion of the generated library"
+      },
+      "fileVersion": {
+        "description": "FileVersion of the generated library"
       }
     },
     "generator": ">=1.1.1 <2.0.0"
