feat: add target framework parameter (#260)

--- a/package.json
+++ b/package.json
@@ -90,6 +90,10 @@
         "default": "0.0.1",
         "description": "Version of the generated library"
       },
+      "targetFramework": {
+        "default": "netstandard2.0;netstandard2.1",
+        "description": "The project target framework"
+      },
       "packageVersion": {
         "description": "PackageVersion of the generated library"
       },
