--- a/package.json
+++ b/package.json
@@ -90,6 +90,9 @@
         "default": "0.0.1",
         "description": "Version of the generated library"
       },
+      "repositoryUrl": {
+        "description": "Repository url for the project file, often needed for release pipelines"
+      },
       "targetFramework": {
         "default": "netstandard2.0;netstandard2.1",
         "description": "The project target framework"
