--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^0.2.23",
-    "@asyncapi/modelina": "^0.59.5",
-    "@asyncapi/parser": "^1.15.1",
+    "@asyncapi/modelina": "^1.0.0-next.22",
+    "@asyncapi/parserV2": "npm:@asyncapi/parser@v2.0.0-next-major.7",
     "@babel/core": "^7.15.0"
   },
   "publishConfig": {
@@ -109,6 +109,10 @@
       },
       "fileVersion": {
         "description": "FileVersion of the generated library"
+      },
+      "serializationLibrary": {
+        "description": "Which serialization library should the models use? `newtonsoft` or `json` (system.text.json)",
+        "default": "json"
       }
     },
     "generator": ">=1.1.1 <2.0.0"
