--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "lint": "eslint --max-warnings 0 --config .eslintrc ./",
     "lint:fix": "npm run lint -- --fix",
     "generate:assets": "npm run generate:examples",
-    "generate:examples": "npm run generate:examples:pubsub",
+    "generate:examples": "npm run generate:examples:pubsub && npm run generate:examples:newtonsoft",
     "generate:examples:pubsub": "cd \"examples/pubsub\" && sh ./Generate.sh",
+    "generate:examples:newtonsoft": "cd \"examples/newtonsoft\" && sh ./Generate.sh",
     "build:examples": "npm run build:examples:pubsub",
     "build:examples:pubsub": "cd \"examples/pubsub\" && sh ./Build.sh",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
