--- a/examples/newtonsoft/streetlight/AsyncapiNatsClient/AsyncapiNatsClient.csproj
+++ b/examples/newtonsoft/streetlight/AsyncapiNatsClient/AsyncapiNatsClient.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NATS.Client" Version="1.0.1" />
-    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 </Project>
