--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   },
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^0.2.23",
-    "@asyncapi/modelina": "^1.0.0-next.40",
-    "ajv": "^8.12.0"
+    "@asyncapi/modelina": "^1.0.0-next.40"
   },
   "publishConfig": {
     "access": "public"
