--- a/.github/workflows/examples-pr-testing.yml
+++ b/.github/workflows/examples-pr-testing.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
+      - name: Upgrade to npm version 9
+        run: npm i -g npm@9
       - name: Install dependencies
         id: first-installation
         run: npm install --loglevel verbose
