--- a/.github/workflows/examples-pr-testing.yml
+++ b/.github/workflows/examples-pr-testing.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Install dependencies
         id: first-installation
         run: npm ci
+        continue-on-error: true
+      - name: Clear NPM cache and install deps again
+        run: | 
+          npm cache clean --force
+          npm ci
       - name: Generate examples
         run: npm run generate:examples
       - name: Build examples
