--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@asyncapi/generator": "^1.9.17",
+    "@asyncapi/cli": "0.32.0",
+    "@babel/core": "^7.21.3",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.0.4",
     "@semantic-release/npm": "^7.0.3",
