remove yaml example

--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     "lint": "eslint --max-warnings 0 --config .eslintrc ./",
     "lint:fix": "npm run lint -- --fix",
     "generate:assets": "npm run generate:examples",
-    "generate:examples": "npm run generate:examples:pubsub && npm run generate:examples:newtonsoft && npm run generate:examples:yaml",
+    "generate:examples": "npm run generate:examples:pubsub && npm run generate:examples:newtonsoft",
     "generate:examples:pubsub": "cd \"examples/pubsub\" && sh ./Generate.sh",
     "generate:examples:newtonsoft": "cd \"examples/newtonsoft\" && sh ./Generate.sh",
-    "generate:examples:yaml": "cd \"examples/yaml\" && sh ./Generate.sh",
-    "build:examples": "npm run build:examples:pubsub && npm run build:examples:newtonsoft && npm run build:examples:yaml",
+    "build:examples": "npm run build:examples:pubsub && npm run build:examples:newtonsoft",
     "build:examples:pubsub": "cd \"examples/pubsub\" && sh ./Build.sh",
     "build:examples:newtonsoft": "cd \"examples/newtonsoft\" && sh ./Build.sh",
-    "build:examples:yaml": "cd \"examples/yaml\" && sh ./Build.sh",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "semantic-release",
     "contributors:add": "all-contributors add",
