--- a/.github/workflows/examples-pr-testing.yml
+++ b/.github/workflows/examples-pr-testing.yml
@@ -14,22 +14,17 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version-file: '.nvmrc'
       - name: Install dependencies
         id: first-installation
-        run: npm install --loglevel verbose
-        continue-on-error: true
-      - name: Clear NPM cache and install deps again
-        run: | 
-          npm cache clean --force
-          npm install --loglevel verbose
+        run: npm ci
       - name: Generate examples
         run: npm run generate:examples
       - name: Build examples
